Compiler Bouw/compiler/test/basic/stephen/fail/bad_init.cvc
// Should produce a type checking error 0 is an int literal, not a float.

#include "civic.h"

export int main() {
    float a = 0;
    return 0;
}
